--- a/Parcial1/less/index.html
+++ b/Parcial1/less/index.html
@@ -3,115 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        :root {
-            --color-primario: #f4f4f4;
-            --card-fondo: white;
-            --color-header: #333;
-            --color-fuente: black;
-        }
-
-        #tema:checked ~ header {
-            --color-header: purple !important;
-        }
-
-        #tema:checked ~ .container {
-            --card-fondo: rgba(159, 0, 159, 0.55);
-            --color-fuente: white;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: var(--color-primario);
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-
-        header {
-            background-color: var(--color-header);
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-
-        h1 {
-            margin-top: 30px;
-            font-size: 3rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 20px auto 0;
-            padding: 20px;
-            background-color: var(--card-fondo);
-            border-radius: 8px;
-            color: var(--color-fuente);
-        }
-
-        h2 {
-            font-size: 2.5rem;
-            color: #333;
-            margin-top: 0.5em;
-        }
-
-        .sinopsis {
-            font-size: 1.1rem;
-            line-height: 1.8;
-        }
-
-        p.subtitle {
-            font-size: 1.3rem;
-            font-weight: bold;
-            color: #777;
-        }
-
-        #highlight {
-            background-color: #ffd700;
-            padding: 20px;
-            border-radius: 8px;
-            margin-top: 2em;
-            color: #333;
-            text-align: center;
-        }
-
-        #highlight p {
-            margin: 0;
-            font-size: 1.2rem;
-            font-style: italic;
-        }
-
-        .image-container {
-            text-align: center;
-            margin-top: 2em;
-        }
-
-        .image-container img {
-            max-height: 400px;
-            border-radius: 8px;
-        }
-
-        .image-caption {
-            font-size: 1.1rem;
-            color: #777;
-            margin-top: 0.5em;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
     <title>Top Gun: Maverick</title>
 </head>
 <body>
-    <label for="tema">Tema</label>
-    <input type="checkbox" name="tema" id="tema">
     <header>
         <h1>Top Gun: Maverick</h1>
         <p>La leyenda continúa...</p>
     </header>
-
-    <main class="container">
+    <div class="container">
         <h2>Sinopsis</h2>
         <p class="sinopsis">En <strong>"Top Gun: Maverick"</strong>, el capitán de la Marina de los Estados Unidos, <em>Pete
-            “Maverick” Mitchell</em>, regresa a la prestigiosa academia Top Gun como instructor de vuelo. En un mundo
+            "Maverick" Mitchell</em>, regresa a la prestigiosa academia Top Gun como instructor de vuelo. En un mundo
             donde la tecnología está redefiniendo el combate aéreo, <span style="color: #e74c3c;">Maverick</span>
             enfrenta el desafío de entrenar a una nueva generación de pilotos, incluido el intrépido teniente <abbr
                     title="Bradley">Rooster</abbr> Bradshaw.</p>
@@ -143,7 +46,7 @@
             <img src="fight.jpeg" alt="Aviones en acción">
             <p class="image-caption">Emocionantes escenas de combate aéreo</p>
         </div>
-    </main>
+    </div>
     <div id="highlight">
         <p>No te pierdas esta emocionante secuela que promete llevarte a alturas vertiginosas y dejarte sin aliento.
             ¡Prepárate para una experiencia de vuelo como ninguna otra!</p>
